--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="styles.css">
   <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-database.js"></script>
+
+  <script type="module" src="firebase-config.js"></script> <!-- Firebaseの初期化 -->
 </head>
 <body>
   <div id="app">
@@ -35,7 +37,6 @@
     </div>
   </div>
 
-  <script src="firebase-config.js"></script>
-  <script src="app.js"></script>
+  <script src="app.js"></script>            <!-- アプリのロジック -->
 </body>
 </html>
