--- a/index.html
+++ b/index.html
@@ -16,16 +16,10 @@
     </header>
     
     <main>
-      <div id="container">
-        <!-- 過去の数字 -->
-        <div id="history">
-          <h3>過去の数字</h3>
-          <div id="number-grid"></div>
-        </div>
+      <div id="main-container">
         <!-- 最新の数字 -->
         <div id="latest-number">
-          <h3>最新の数字</h3>
-          <div id="current-number">--</div>
+          <div id="number-box">--</div>
           <div id="controls" style="display:none;">
             <button id="start-btn">ランダムスタート</button>
             <button id="manual-btn">手動入力</button>
@@ -44,19 +38,6 @@
       <input type="password" id="admin-password">
       <button id="admin-login-submit">ログイン</button>
       <button id="close-popup">閉じる</button>
-    </div>
-  </div>
-
-  <!-- 編集ポップアップ -->
-  <div id="edit-popup" class="popup" style="display:none;">
-    <div class="popup-content">
-      <h2>数字を編集</h2>
-      <label for="current-number-edit">現在の数字:</label>
-      <input type="text" id="current-number-edit" readonly>
-      <label for="new-number">変更後の数字:</label>
-      <input type="number" id="new-number" min="1" max="75">
-      <button id="edit-confirm">確定</button>
-      <button id="edit-cancel">キャンセル</button>
     </div>
   </div>
 
