--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ビンゴマシーン</title>
+  <title>ビンゴゲーム</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-database-compat.js"></script>
@@ -11,7 +11,7 @@
 <body>
   <div id="app">
     <header>
-      <h1>ビンゴマシーン</h1>
+      <h1>ビンゴゲーム</h1>
       <button id="admin-login-btn">管理者ログイン</button>
     </header>
     
