--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"><!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ビンゴゲーム</title>
   <link rel="stylesheet" href="styles.css">
@@ -21,49 +17,10 @@
     
     <main>
       <div id="main-container">
-        <!-- 最新の数字 -->
-        <div id="latest-number">
-          <div id="number-box">--</div>
-          <div id="controls" style="display:none;">
-            <button id="start-btn">ランダムスタート</button>
-            <button id="manual-btn">手動入力</button>
-            <button id="reset-btn">リセット</button>
-          </div>
+        <!-- 過去の数字 -->
+        <div id="history-container">
+          <div id="history-grid"></div>
         </div>
-      </div>
-    </main>
-  </div>
-
-  <!-- 管理者ログインポップアップ -->
-  <div id="admin-popup" class="popup" style="display:none;">
-    <div class="popup-content">
-      <h2>管理者ログイン</h2>
-      <label for="admin-password">パスワード:</label>
-      <input type="password" id="admin-password">
-      <button id="admin-login-submit">ログイン</button>
-      <button id="close-popup">閉じる</button>
-    </div>
-  </div>
-
-  <script src="firebase-config.js"></script>
-  <script src="app.js"></script>
-</body>
-</html>
-
-  <title>ビンゴゲーム</title>
-  <link rel="stylesheet" href="styles.css">
-  <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-database-compat.js"></script>
-</head>
-<body>
-  <div id="app">
-    <header>
-      <h1>ビンゴゲーム</h1>
-      <button id="admin-login-btn">管理者ログイン</button>
-    </header>
-    
-    <main>
-      <div id="main-container">
         <!-- 最新の数字 -->
         <div id="latest-number">
           <div id="number-box">--</div>
