--- a/index.html
+++ b/index.html
@@ -19,11 +19,6 @@
         <!-- 最新の数字 -->
         <div id="latest-number">
           <div id="number-box">--</div>
-          <div id="controls" style="display:none;">
-            <button id="start-btn">ランダムスタート</button>
-            <button id="manual-btn">手動入力</button>
-            <button id="reset-btn">リセット</button>
-          </div>
         </div>
         <!-- 過去の数字 -->
         <div id="history-container">
@@ -31,6 +26,12 @@
         </div>
       </div>
     </main>
+    
+    <footer id="controls" style="display:none;">
+      <button id="start-btn">ランダムスタート</button>
+      <button id="manual-btn">手動入力</button>
+      <button id="reset-btn">リセット</button>
+    </footer>
   </div>
 
   <!-- 管理者ログインポップアップ -->
