--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
         <button id="close-edit-popup">閉じる</button>
       </div>
     </div>
+
+    <!-- 管理者ログインポップアップ -->
+    <div id="admin-popup" class="popup" style="display:none;">
+      <div class="popup-content">
+        <h2>管理者ログイン</h2>
+        <label for="admin-password">パスワード:</label>
+        <input type="password" id="admin-password">
+        <button id="admin-login-submit">ログイン</button>
+        <button id="close-popup">閉じる</button>
+      </div>
+    </div>
   </div>
 
   <script src="firebase-config.js"></script>
