--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
     </main>
     
-    <footer id="controls" style="display:flex; justify-content: center;">
+    <footer id="controls" style="display:flex; justify-content: left;">
       <button id="admin-login-btn">管理者ログイン</button>
       <button id="start-btn" style="display:none;">ランダムスタート</button>
       <button id="manual-btn" style="display:none;">手動入力</button>
