--- a/index.html
+++ b/index.html
@@ -35,9 +35,14 @@
       <div class="popup-content">
         <h2>数字編集</h2>
         <label id="selected-number-label">選択した数字: </label>
-        <input type="number" id="edit-number-input" min="1" max="75">
-        <button id="edit-submit">変更</button>
-        <button id="close-edit-popup">閉じる</button>
+        <div style="display: flex; align-items: center;">
+          <label for="edit-number-input">変更したい数字: </label>
+          <input type="number" id="edit-number-input" min="1" max="75">
+        </div>
+        <div style="margin-top: 20px; display: flex; justify-content: center;">
+          <button id="edit-submit" style="margin-right: 10px;">変更</button>
+          <button id="close-edit-popup">閉じる</button>
+        </div>
       </div>
     </div>
 
