--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ビンゴゲーム</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-database-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-database-compat.js"></script>
 </head>
 <body>
   <div id="app">
@@ -54,6 +54,14 @@
         <input type="password" id="admin-password">
         <button id="admin-login-submit">ログイン</button>
         <button id="close-popup">閉じる</button>
+      </div>
+    </div>
+
+    <!-- メッセージポップアップ -->
+    <div id="message-popup" class="popup" style="display:none;">
+      <div class="popup-content">
+        <h2 id="message-popup-text"></h2>
+        <button id="close-message-popup">閉じる</button>
       </div>
     </div>
 
