--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
     </div>
 
     <!-- メッセージポップアップ -->
-    <div id="message-popup" class="popup" style="display:none;">
+    <div id="alert-popup" class="popup" style="display:none;">
       <div class="popup-content">
-        <h2 id="message-popup-text"></h2>
-        <button id="close-message-popup">閉じる</button>
+        <h2>アラート</h2>
+        <p id="alert-message"></p>
+        <button id="close-alert-popup">閉じる</button>
       </div>
     </div>
 
