--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
       </div>
     </div>
 
+    <!--リセットポップアップ -->
+    <div id="reset-confirm-popup" class="popup" style="display:none;">
+      <div class="popup-content">
+        <h2>リセット確認</h2>
+        <p>本当にリセットしますか？</p>
+        <button id="confirm-reset-btn">はい</button>
+        <button id="cancel-reset-btn">いいえ</button>
+      </div>
+    </div>
+
     <!-- メッセージポップアップ -->
     <div id="alert-popup" class="popup" style="display:none;">
       <div class="popup-content">
