--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
       </div>
     </div>
 
-    <!--リセットポップアップ -->
+    <!-- アラートポップアップ -->
+    <div id="alert-popup" class="popup" style="display:none;">
+      <div class="popup-content">
+        <h2>アラート</h2>
+        <p id="alert-message"></p>
+        <button id="close-alert-popup">閉じる</button>
+      </div>
+    </div>
+
+    <!-- リセット確認ポップアップ -->
     <div id="reset-confirm-popup" class="popup" style="display:none;">
       <div class="popup-content">
         <h2>リセット確認</h2>
         <p>本当にリセットしますか？</p>
         <button id="confirm-reset-btn">はい</button>
         <button id="cancel-reset-btn">いいえ</button>
-      </div>
-    </div>
-
-    <!-- メッセージポップアップ -->
-    <div id="alert-popup" class="popup" style="display:none;">
-      <div class="popup-content">
-        <h2>アラート</h2>
-        <p id="alert-message"></p>
-        <button id="close-alert-popup">閉じる</button>
       </div>
     </div>
 
