--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         </div>
       </div>
     </main>
-    
+
+    <!-- 管理者ログインポップアップ -->
     <footer id="controls" style="display:flex; justify-content: left; background-color: white; height: 50px;">
       <button id="admin-login-btn">管理者ログイン</button>
       <button id="start-btn" style="display:none;">ランダムスタート</button>
@@ -73,6 +74,19 @@
         <p>本当にリセットしますか？</p>
         <button id="confirm-reset-btn">はい</button>
         <button id="cancel-reset-btn">いいえ</button>
+      </div>
+    </div>
+
+    <!-- 手動入力ポップアップ -->
+    <div id="manual-popup" class="popup" style="display:none;">
+      <div class="popup-content">
+        <h2>数字入力</h2>
+        <label for="manual-number-input">数字を入力してください (1～75):</label>
+        <input type="number" id="manual-number-input" min="1" max="75">
+        <div style="margin-top: 20px; display: flex; justify-content: center;">
+          <button id="manual-submit" style="margin-right: 10px;">OK</button>
+          <button id="close-manual-popup">キャンセル</button>
+        </div>
       </div>
     </div>
 
