--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <button id="reset-btn" style="display:none;">リセット</button>
     </footer>
     
-    <!-- 数字編集ポップアップ -->
+    <!-- 数字編集ポップアップに削除ボタンを追加 -->
     <div id="edit-popup" class="popup" style="display:none;">
       <div class="popup-content">
         <h2>数字編集</h2>
