--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="popup-content">
         <h2>管理者ログイン</h2>
         <label for="admin-password">パスワード:</label>
-        <input type="password" id="admin-password">
+        <input type="password" id="admin-password" pattern="[a-zA-Z0-9]*">
         <button id="admin-login-submit">ログイン</button>
         <button id="close-popup">閉じる</button>
       </div>
