--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <footer id="controls" style="display:flex; justify-content: left; background-color: white; height: 50px;">
       <button id="admin-login-btn">管理者ログイン</button>
       <button id="start-btn" style="display:none;">ランダムスタート</button>
+      <div id="random-start-time-display" style="margin-top: 10px; font-weight: bold; display:none;"></div>
       <button id="manual-btn" style="display:none;">手動入力</button>
       <button id="reset-btn" style="display:none;">リセット</button>
       <button id="settings-btn" style="display:none;">設定</button>
@@ -109,11 +110,7 @@
       <div class="popup-content">
         <h2>設定</h2>
         <label for="random-start-time">ランダムスタートの秒数:</label>
-        <input type="number" id="random-start-time" min="1" value="2">
-        <label for="random-start-time-unit">秒</label>
-        <label for="background-url">背景画像のURL:</label>
-        <input type="text" id="background-url">
-        <p style="font-size: 12px; color: gray;">クラウドに誰でもアクセスできるようにして張り付けてください。<br>背景70％透過して繰り返し配置します。<br>空白にしたら白に設定します。</p>
+        <input type="number" id="random-start-time" min="1" value="2"> 秒
         <div style="margin-top: 20px; display: flex; justify-content: center;">
           <button id="save-settings" style="margin-right: 10px;">保存</button>
           <button id="close-settings-popup">閉じる</button>
