--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-database-compat.js"></script>
 </head>
 <body>
-  <div id="app">
+  <div id="app" style="
+    margin-top: 130px;
+  ">
     <main>
-      <div id="main-container">
+      <div id="main-container" >
         <!-- 最新の数字 -->
         <div id="latest-number">
           <div id="number-box">--</div>
