--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ビンゴゲーム</title>
   <link rel="stylesheet" href="styles.css">
+
+  <!-- 1. 必ず bcrypt.js を先に読み込む -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bcryptjs/2.4.3/bcrypt.min.js"></script>
+
+  <!-- 2. その後に Firebase を読み込む -->
   <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-database-compat.js"></script>
+
 </head>
 <body>
   <div id="app" style="
